<?xml version="1.0"?>
<package>
  <name>teleop_keyboard</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop.</description>

  <maintainer email="now9728@gmail.com">Jay Gil</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
